# GIP-ws2019-remake-

./: .gitignore
offline_aufgaben/A02/: CMakeLists.txt  main.cpp
offline_aufgaben/A03/: CMakeLists.txt  main.cpp
offline_aufgaben/A04/: CMakeLists.txt  main.cpp
offline_aufgaben/A05/: CMakeLists.txt  main.cpp
offline_aufgaben/A06/: CMakeLists.txt  main.cpp
offline_aufgaben/A07/: CMakeLists.txt  main.cpp
offline_aufgaben/A08/: CMakeLists.txt  main.cpp
offline_aufgaben/sort_three_vars/: CMakeLists.txt  sort_three_vars.cpp  sort_three_vars.h  swap_vars.h
offline_aufgaben/sort_three_vars_v1.1/: CMakeLists.txt  main.cpp  sort_three_vars.cpp  sort_three_vars.h
offline_aufgaben/swap_vars/: CMakeLists.txt  main.cpp  swap_vars.cpp
praktikum/prak02/: CMakeLists.txt  main.cpp
praktikum/prak03/01_vergleichVonDatumsangaben(if-else)/: CMakeLists.txt  main.cpp
praktikum/prak03/02_kleinsteUndgroessteZahl/: CMakeLists.txt  main.cpp
praktikum/prak03/03/: main.cpp
praktikum/prak07/01_02_03_04_DoppeltVerketteteListe/: CMakeLists.txt  catch.h  liste.cpp  liste.h  liste_main.cpp  test_aus_liste_loeschen.cpp
praktikum/prak09/04_unit_testing/: CMakeLists.txt  MyRectangle.cpp  MyRectangle.h  main.cpp
praktikum/prak09/05_unit_test_mock_data/: CImgGIP05Mock.h  CMakeLists.txt  MyRectangle.cpp  MyRectangle.h  catch.h  collision_test.cpp
praktikum/prak10/01_myFilledRectangle/: CMakeLists.txt  MyFilledRectangle.cpp  MyFilledRectangle.h  MyRectangle.h  main.cpp
praktikum/prak11/CharListenKnoten/: CMakeLists.txt  CharListenKnoten.cpp  CharListenKnoten.h  MyString2.cpp  MyString2.h  catch.h  main.cpp  test_charlistenknoten.cpp  test_charlistenknoten_count.cpp  test_charlistenknoten_id.cpp  test_deep_copy.cpp  test_hinten_anfuegen.cpp  test_loesche_alle.cpp  test_mystring2_at.cpp  test_mystring2_copy_assignment.cpp  test_mystring2_destruktor.cpp  test_mystring2_from_string.cpp  test_mystring2_length.cpp  test_mystring2_operator_plus.cpp  test_mystring2_step_1.cpp  test_mystring2_to_string.cpp
übungen/aepfelEssen/: CMakeLists.txt  main.cpp
übungen/rechnung_erstellen(if-else)/: CMakeLists.txt  catch.hpp  rechnung_erstellen.cpp  rechnung_erstellen.h  test.cpp
übungen/primfaktorzerlegung/: CMakeLists.txt  main.cpp
übungen/rechnung_erstellen(if-else)/: CMakeLists.txt  main.cpp  rechnung_erstellen.cpp  rechnung_erstellen.h
übungen/sorting/: main.cpp
(+60 files in other folders)
